tests/sources/invalid/classes/method_duplicate_param_shadow.fire
// Semantic error: a class method parameter name that shadows another
// parameter in the same method's own scope.

class Adder {
    int32 sum(int32 x, int32 x) {  //~ ERROR FS-SEM-0010 @30
        return x;
    }
}
